[gd_scene load_steps=10 format=2]

[ext_resource path="res://GameDVDCardtridge/ParlorClassic/Tscene/UI.gd" type="Script" id=1]
[ext_resource path="res://fonts/Built/Oswald_B_72.tres" type="FontFile" id=2]
[ext_resource path="res://fonts/Built/Oswald_B_36.tres" type="FontFile" id=3]
[ext_resource path="res://fonts/Built/Oswald_B_48.tres" type="FontFile" id=4]
[ext_resource path="res://GameDVDCardtridge/ParlorClassic/Tscene/GamePlayUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/AreYouSureDialog.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameDVDCardtridge/ParlorClassic/Krita/JustSemutButtonBox.png" type="Texture2D" id=9]
[ext_resource path="res://GameDVDCardtridge/ParlorClassic/Photoshop/Septesen/JOELwindows7_edit_JustTitleParlor.png" type="Texture2D" id=10]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/NextMenu.tscn" type="PackedScene" id=12]


[node name="UI" type="CanvasLayer"]
process_mode = 2
follow_viewport_enabled = true
script = ExtResource( 1 )

[node name="MasterMindUI" type="Control" parent="."]
process_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="MasterMindUI"]
process_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpakBox" type="VBoxContainer" parent="MasterMindUI/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBanner" type="HBoxContainer" parent="MasterMindUI/MainMenu/SpakBox"]
offset_right = 1920.0
offset_bottom = 250.0
mouse_filter = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MasterMindUI/MainMenu/SpakBox/TitleBanner"]
offset_left = 560.0
offset_right = 1360.0
offset_bottom = 250.0
custom_minimum_size = Vector2( 800, 250 )
mouse_filter = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="MenuButton" type="HBoxContainer" parent="MasterMindUI/MainMenu/SpakBox"]
offset_top = 258.0
offset_right = 1920.0
offset_bottom = 922.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideBar" type="VBoxContainer" parent="MasterMindUI/MainMenu/SpakBox/MenuButton"]
offset_right = 200.0
offset_bottom = 664.0
custom_minimum_size = Vector2( 200, 0 )
mouse_filter = 2
alignment = 1

[node name="SettingNow" type="TextureButton" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/SideBar"]
offset_top = 61.0
offset_right = 200.0
offset_bottom = 236.0
custom_minimum_size = Vector2( 0, 175 )
mouse_filter = 1
texture_normal = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/SideBar/SettingNow"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource( 3 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_outline_color = Color( 1, 0.482353, 0, 1 )
text = "Setting"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutCreditNow" type="TextureButton" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/SideBar"]
offset_top = 244.0
offset_right = 200.0
offset_bottom = 419.0
custom_minimum_size = Vector2( 0, 175 )
mouse_filter = 1
texture_normal = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/SideBar/AboutCreditNow"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource( 3 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_outline_color = Color( 1, 0.482353, 0, 1 )
text = "About 
& 
Credit"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeDVDnow" type="TextureButton" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/SideBar"]
offset_top = 427.0
offset_right = 200.0
offset_bottom = 602.0
custom_minimum_size = Vector2( 0, 175 )
mouse_filter = 1
texture_normal = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/SideBar/ChangeDVDnow"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource( 3 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_outline_color = Color( 1, 0.482353, 0, 1 )
text = "Change
DVD"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuSelections" type="CenterContainer" parent="MasterMindUI/MainMenu/SpakBox/MenuButton"]
offset_left = 208.0
offset_right = 1712.0
offset_bottom = 664.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InsideContainsThese" type="VBoxContainer" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/MainMenuSelections"]
offset_left = 527.0
offset_top = 99.0
offset_right = 977.0
offset_bottom = 565.0
custom_minimum_size = Vector2( 400, 400 )
mouse_filter = 2
alignment = 1

[node name="PlayNow" type="TextureButton" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/MainMenuSelections/InsideContainsThese"]
offset_right = 450.0
offset_bottom = 150.0
custom_minimum_size = Vector2( 450, 150 )
mouse_filter = 1
texture_normal = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/MainMenuSelections/InsideContainsThese/PlayNow"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_outline_color = Color( 1, 0.482353, 0, 1 )
text = "Play"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionNow" type="TextureButton" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/MainMenuSelections/InsideContainsThese"]
offset_top = 158.0
offset_right = 450.0
offset_bottom = 308.0
custom_minimum_size = Vector2( 450, 150 )
mouse_filter = 1
texture_normal = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/MainMenuSelections/InsideContainsThese/InstructionNow"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_outline_color = Color( 1, 0.482353, 0, 1 )
text = "Instructions"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitNow" type="TextureButton" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/MainMenuSelections/InsideContainsThese"]
offset_top = 316.0
offset_right = 450.0
offset_bottom = 466.0
custom_minimum_size = Vector2( 450, 150 )
mouse_filter = 1
texture_normal = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="MasterMindUI/MainMenu/SpakBox/MenuButton/MainMenuSelections/InsideContainsThese/ExitNow"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_outline_color = Color( 1, 0.482353, 0, 1 )
text = "Exit"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideBar2" type="VBoxContainer" parent="MasterMindUI/MainMenu/SpakBox/MenuButton"]
offset_left = 1720.0
offset_right = 1920.0
offset_bottom = 664.0
custom_minimum_size = Vector2( 200, 0 )
mouse_filter = 2

[node name="SpecialButton" type="HBoxContainer" parent="MasterMindUI/MainMenu/SpakBox"]
offset_top = 930.0
offset_right = 1920.0
offset_bottom = 1080.0
custom_minimum_size = Vector2( 0, 150 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="TextureButton" parent="MasterMindUI/MainMenu/SpakBox/SpecialButton"]
offset_left = 1745.0
offset_right = 1920.0
offset_bottom = 150.0
custom_minimum_size = Vector2( 175, 0 )
mouse_filter = 1
texture_normal = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="MasterMindUI/MainMenu/SpakBox/SpecialButton/ShopButton"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource( 4 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_outline_color = Color( 1, 0.482353, 0, 1 )
text = "Shop"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamePlayUI" parent="MasterMindUI" instance=ExtResource( 5 )]
visible = false

[node name="NextMenu" parent="MasterMindUI" instance=ExtResource( 12 )]
visible = false

[node name="AreYouSureDialog" parent="MasterMindUI" instance=ExtResource( 6 )]
visible = true
[connection signal="pressed" from="MasterMindUI/MainMenu/SpakBox/MenuButton/SideBar/SettingNow" to="." method="_on_SettingNow_pressed"]
[connection signal="pressed" from="MasterMindUI/MainMenu/SpakBox/MenuButton/SideBar/AboutCreditNow" to="." method="_on_AboutCreditNow_pressed"]
[connection signal="pressed" from="MasterMindUI/MainMenu/SpakBox/MenuButton/SideBar/ChangeDVDnow" to="." method="_on_ChangeDVDnow_pressed"]
[connection signal="pressed" from="MasterMindUI/MainMenu/SpakBox/MenuButton/MainMenuSelections/InsideContainsThese/PlayNow" to="." method="_on_PlayNow_pressed"]
[connection signal="pressed" from="MasterMindUI/MainMenu/SpakBox/MenuButton/MainMenuSelections/InsideContainsThese/InstructionNow" to="." method="_on_InstructionNow_pressed"]
[connection signal="pressed" from="MasterMindUI/MainMenu/SpakBox/MenuButton/MainMenuSelections/InsideContainsThese/ExitNow" to="." method="_on_ExitNow_pressed"]
[connection signal="pressed" from="MasterMindUI/MainMenu/SpakBox/SpecialButton/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="NextWeponNow" from="MasterMindUI/GamePlayUI" to="." method="_on_GamePlayUI_NextWeponNow"]
[connection signal="PauseNow" from="MasterMindUI/GamePlayUI" to="." method="_on_GamePlayUI_PauseNow"]
[connection signal="PrevWeponNow" from="MasterMindUI/GamePlayUI" to="." method="_on_GamePlayUI_PrevWeponNow"]
[connection signal="ReloadNow" from="MasterMindUI/GamePlayUI" to="." method="_on_GamePlayUI_ReloadNow"]
[connection signal="NoImNotSure" from="MasterMindUI/AreYouSureDialog" to="." method="_on_AreYouSureDialog_NoImNotSure"]
[connection signal="YesImSure" from="MasterMindUI/AreYouSureDialog" to="." method="_on_AreYouSureDialog_YesImSure"]
